@@ -2,6 +2,7 @@
 - Update stream team module with localized strings
 - Update trivia module with localized strings
 - Added unified `.taco <group> help` command that directs to the correct help command.
+- Added `.taco gif [search]` that will return a `taco gif` by default.
 
 **v1.0.52**
 - Added more locialized strings to replace hard coded strings
